Make code JDK 8 compatible.